--- a/source/unix/pbpedit/Makefile.am
+++ b/source/unix/pbpedit/Makefile.am
@@ -4,7 +4,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 INCLUDES		= -I$(top_srcdir) -I$(top_srcdir)/source -I$(top_srcdir)/source/libs/paragui/include @LokiInclude@
 
-AM_CXXFLAGS 		= $(SDL_CFLAGS) -Dkarteneditor -Dpbpeditor $(SIGC_CFLAGS) $(LUA_TAGS)
+AM_CXXFLAGS 		= $(SDL_CFLAGS) -Dkarteneditor -Dpbpeditor $(SIGC_CFLAGS)
 
 bin_PROGRAMS 		= asc_pbpedit
 
