--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.3.74.0)
+AC_INIT(asc,2.3.74.1)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -192,16 +192,13 @@ AC_CHECK_LIB( SDL_image,
 PKG_CHECK_MODULES(LUA, [lua >= 5.1 ],, LUA_MISSING=1 )
 
 if test "x$LUA_MISSING" = "x1"; then
-   PKG_CHECK_MODULES(LUA, [lua5.1 >= 5.1 ],, AC_LIB_MISSING( LUA, http://www.lua.org/ ) )
-
+   PKG_CHECK_MODULES(LUA, [lua5.1 >= 5.1 ],, AC_LIB_MISSING( LUA 5.1, http://www.lua.org/ ) )
 fi
 
 LUA_FLAGS=$LUA_CFLAGS
-LUA_TAGS="-DLUAINTERFACE"
 
 AC_SUBST(LUA_FLAGS)
 AC_SUBST(LUA_LIBS)
-AC_SUBST(LUA_TAGS)
 
 
 AC_CHECK_LIB(jpeg, 
