--- a/source/dialogs/Makefile.in
+++ b/source/dialogs/Makefile.in
@@ -58,7 +58,7 @@ am_libgamedialogs_la_OBJECTS = cargodialog.lo unitcounting.lo \
 	buildingtypeselector.lo choosetech.lo productionanalysis.lo \
 	internalAmmoTransferDialog.lo replayrecorder.lo \
 	mailoptionseditor.lo vehicleproductionselection.lo \
-	infodialogs.lo actionmanager.lo
+	infodialogs.lo actionmanager.lo gotoposition.lo
 libgamedialogs_la_OBJECTS = $(am_libgamedialogs_la_OBJECTS)
 libmapeddialogs_la_DEPENDENCIES =
 am_libmapeddialogs_la_OBJECTS = cargoeditor.lo cargowidget.lo \
@@ -144,7 +144,6 @@ LTLIBOBJS = @LTLIBOBJS@
 LUA_CFLAGS = @LUA_CFLAGS@
 LUA_FLAGS = @LUA_FLAGS@
 LUA_LIBS = @LUA_LIBS@
-LUA_TAGS = @LUA_TAGS@
 LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
@@ -260,7 +259,7 @@ libdialogs_la_SOURCES = editmapparam.cpp cargowidget.cpp selectionwindow.cpp fil
 libdialogs_la_LIBADD = @SDL_LIBS@ 
 libgamedialogs_la_SOURCES = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
                               editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp productionanalysis.cpp internalAmmoTransferDialog.cpp replayrecorder.cpp \
-                              mailoptionseditor.cpp vehicleproductionselection.cpp infodialogs.cpp actionmanager.cpp
+                              mailoptionseditor.cpp vehicleproductionselection.cpp infodialogs.cpp actionmanager.cpp gotoposition.cpp
 
 libgamedialogs_la_LIBADD = @SDL_LIBS@ 
 libmapeddialogs_la_SOURCES = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp exchangegraphics.cpp importbi3map.cpp edittechadapter.cpp
@@ -340,6 +339,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/exchangegraphics.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fieldmarker.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fileselector.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gotoposition.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/importbi3map.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/infodialogs.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/internalAmmoTransferDialog.Plo@am__quote@
