--- a/source/unix/pbpedit/Makefile.am
+++ b/source/unix/pbpedit/Makefile.am
@@ -25,7 +25,8 @@ gameevent_dialogs.cpp clipboard.cpp resourceplacement.cpp resourceplacementdialo
 geometry.cpp guidimension.cpp unitset.cpp fieldimageloader.cpp \
 iconrepository.cpp overviewmapimage.cpp mapfield.cpp objects.cpp overviewmappanel.cpp \
 explosivemines.cpp legacynetworkloaders.cpp playercolor.cpp statistics.cpp \
-player.cpp cannedmessages.cpp mapimageexport.cpp mainscreenwidget.cpp windowing.cpp
+player.cpp cannedmessages.cpp mapimageexport.cpp mainscreenwidget.cpp windowing.cpp \
+campaignactionrecorder.cpp luacommandwriter.cpp
 
 asc_pbpedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
 $(top_builddir)/source/libs/triangul/libtriangul.la $(BZIP2_LIBS) \
