Updated VS projects

--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\campaignactionrecorder.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\cannedmessages.cpp"
 				>
 			</File>
@@ -360,6 +364,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\loadpcxc.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\luacommandwriter.cpp"
 				>
 			</File>
 			<File
