--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -236,6 +236,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\campaignactionrecorder.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\cannedmessages.cpp"
 				>
 			</File>
@@ -373,6 +377,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\loadpcxc.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\luacommandwriter.cpp"
 				>
 			</File>
 			<File
