--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.3.74.2)
+AC_INIT(asc, )
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
