--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -191,6 +191,7 @@ Section "Uninstall"
   Delete $INSTDIR\README-SDL
   Delete $INSTDIR\Microsoft.VC90.CRT.manifest
   Delete $INSTDIR\README-SDL.txt"
+  Delete $INSTDIR\COPYING"
 
   Delete $DOCUMENTS\ASC\ASC2.cache
   Delete $DOCUMENTS\ASC\progress.dat
