More robust error message handling  More logging output  Fixed synchronisation bug

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -392,6 +392,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\loggingoutput.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\luacommandwriter.cpp"
 				>
 			</File>
