--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -292,6 +292,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\dataversioncheck.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\dialog.cpp"
 				>
 			</File>
@@ -480,6 +484,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\package.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\packagemanager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\packagerepository.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\palette.cpp"
 				>
 			</File>
@@ -621,6 +637,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\vehicletype.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\versionidentifier.cpp"
 				>
 			</File>
 			<File
