--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -263,6 +263,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\dataversioncheck.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\dialog.cpp"
 				>
 			</File>
@@ -443,6 +447,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\package.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\packagemanager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\packagerepository.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\palette.cpp"
 				>
 			</File>
@@ -552,6 +568,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\dialogs\vehicletypeselector.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\versionidentifier.cpp"
 				>
 			</File>
 			<File
